# website

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .prospector.yaml  .travis.yml  Dockerfile  LICENSE.md  Makefile  README.md  Vagrantfile  bower.json  docker-compose.yml  environment.sh  ldap.txt  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot.yml  test.yml
config/: urls.py  wsgi.py
config/settings/: base.py  docker.py  local.py  production.py  test.py
etc/modeemintternet/: psql.txt  secret.txt
etc/uwsgi/: modeemintternet.ini  www.modeemi.fi.ini
hooks/: build
modeeminews/: admin.py  forms.py  models.py  urls.py  views.py
modeeminews/templates/: create.html  read.html  update.html
modeemintternet/: admin.py  apiviews.py  auth.py  bankbarcode.py  feeds.py  forms.py  helpers.py  mailer.py  models.py  routers.py  serializers.py  settings.py  tasks.py  tests.py  urls.py  views.py
modeemintternet/fixtures/: initial.json
modeemintternet/migrations/: 0001_initial.py  0002_soda.py  0003_auto_20141014_1639.py  0004_auto_20150315_0131.py  0005_auto_20150329_1547.py  0006_auto_20150329_2023.py  0007_application_des_crypt.py  0008_auto_20150403_0333.py  0009_auto_20160229_1131.py  0010_auto_20160229_1132.py  0011_auto_20170128_1807.py  0012_auto_20171204_0934.py  0013_auto_20180127_1503.py  0014_auto_20180127_1506.py  0015_application_virtual_key_required.py  0016_auto_20180207_2250.py  0017_format_shadowformat_usergroupmember.py  0018_remove_application_bank_reference.py  0019_auto_20180207_2340.py  0020_auto_20180207_2341.py  0021_auto_20180208_0018.py  0022_auto_20180211_1501.py  0023_remove_application_pbkdf2_sha256.py  0024_auto_20180212_2046.py  0025_membership_membershipfee.py  0026_auto_20190807_1654.py  0027_auto_20190807_1808.py  0028_auto_20190826_1825.py  0029_auto_20190827_2052.py  0030_auto_20190827_2054.py  0031_application_municipality.py  0032_auto_20190828_0014.py  0033_auto_20190828_0015.py  0034_auto_20190828_0103.py  0035_auto_20191212_1852.py  0036_auto_20210222_2111.py  0037_auto_20210222_2113.py  0038_application_md5_crypt.py  0039_feedback_validation_alter_membershipfee_year.py  0040_alter_membershipfee_year.py
modeemintternet/static/: .htaccess  main.css
modeemintternet/templates/: application.html  backup.html  base.html  board.html  contact.html  digipk.html  etusivu.html  feedback.html  hakemus.html  hallitus.html  halutaan.html  hardware.html  head.html  index.html  jaseneksi.html  jasenmaksu.html  laitteisto.html  lue_uutisia.html  nav.html  navigation.html  news.html  palaute.html  palvelut.html  password.html  policy.html  rekisteriseloste.html  rules.html  rules_en.html  saannot.html  services.html  sitemap.xml  society.html  static.html  tapahtumat.html  (+5 more)
scripts/: entrypoint  test.sh
(+33 files in other folders)
