[build-system]
requires = ["setuptools>=30.3.0", "wheel", "setuptools_scm"]

[tool.pytest.ini_options]
testpaths = "modeemintternet"
addopts = "--cov modeemintternet --cov-append --cov-branch --cov-report term-missing --cov-report xml"
python_files = "test*.py tests*.py *test.py *tests.py"
DJANGO_SETTINGS_MODULE = "config.settings.test"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
    | migrations
  )/
)
'''

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = True
envlist =
    py310

[gh-actions]
python =
    3.10: py310

# Normal test environment runs pytest which orchestrates other tools
[testenv]
usedevelop = true
deps =
    -r requirements.txt
commands =
    pytest
    prospector
    mypy modeemintternet
    black --check --diff .
setenv =
    PYTHONDONTWRITEBYTECODE=1
"""
